mapping of competences

--- a/src/app/edition-cv/edition-cv.component.html
+++ b/src/app/edition-cv/edition-cv.component.html
@@ -287,13 +287,27 @@
                         </span>
                         <span class="paddedline locationGap txtItl" dependency="COMP|JSTA|JCIT">
                             <span class="companyname" id="FIELD_COMP">{{listExperience.projet.MOA}}</span><span dependency="COMP+JCIT|JSTA">,</span>
-                            <span class="jobcity" id="FIELD_JCIT">San Francisco</span><span dependency="JCIT+JSTA">, </span>
-                            <span class="jobstate" id="FIELD_JSTA">CA</span>
+                            <!--<span class="jobcity" id="FIELD_JCIT">San Francisco</span><span dependency="JCIT+JSTA">, </span>
+                            <span class="jobstate" id="FIELD_JSTA">CA</span>-->
                         </span>
   
-                        <span class="jobline" id="FIELD_JDES"><ul><li>Screened all visitors and directed them to the correct employee or office.</li><li>Facilitated organized record retrieval and access.</li><li>Organized all new hire, security and temporary paperwork.</li></ul></span>
+                        <span class="jobline" id="FIELD_JDES">{{listExperience.projet.ProjetDesc}}</span>
+                        <span class="paddedline locationGap txtItl" dependency="COMP|JSTA|JCIT">
+
+                            <span class="paddedline" id="FIELD_SKC1">
+                               <b> Compétences Technique: </b>{{listExperience.projet.competence.name}}
+                            </span>
+                        </span>
                     </div>
-                    </div>
+                 <br><br>   
+                </div>
+               
+               
+               
+               
+               
+               
+               
                 </div>
                     <div id="PARAGRAPH_EXPR_-1" class="paragraph datespara PARAGRAPH_EXPR placeholder-text "><div class="clearfix doc-item">
                 </div>       
@@ -316,8 +330,12 @@
                         </span>
   
                     </div>
-                    </div>
+                   
+                
+                </div>
 
+
+                
                 </div>
                 <div data-react-beautiful-dnd-draggable="2" class="sortable-item section-container SortableItem-sibling  data-EDUC"><div class="document-tool sec-tool" id="editIcons" style="right: -2px;"></div><div id="SECTION_EDUCbd7d05cc-9128-43d2-8c52-0fb0fcf63870" class="section education SECTION_EDUC  noparagraph multi-para" data-section-cd="EDUC"><div class=" doc-item"><div class="heading"><div class="sectiontitle" id="SECTIONNAME_EDUC">Certificats<span class="rename-section text-rename"> </span></div></div><div class=""><div class=""><div id="PARAGRAPH_EDUC_0" class="paragraph datespara PARAGRAPH_EDUC firstparagraph placeholder-text "><div class="clearfix doc-item">
                     <div *ngFor="let listCertif of arrayListCertif">
@@ -344,7 +362,27 @@
                 
                     </div></div></div></div></div></div></div>
 
+                    <div data-react-beautiful-dnd-draggable="2" class="sortable-item section-container SortableItem-sibling  data-EDUC"><div class="document-tool sec-tool" id="editIcons" style="right: -2px;"></div><div id="SECTION_EDUCbd7d05cc-9128-43d2-8c52-0fb0fcf63870" class="section education SECTION_EDUC  noparagraph multi-para" data-section-cd="EDUC"><div class=" doc-item"><div class="heading"><div class="sectiontitle" id="SECTIONNAME_EDUC">Compétences<span class="rename-section text-rename"> </span></div></div><div class=""><div class=""><div id="PARAGRAPH_EDUC_0" class="paragraph datespara PARAGRAPH_EDUC firstparagraph placeholder-text "><div class="clearfix doc-item">
+                        <div *ngFor="let listComp of arrayListComp">
+    
+                            
+                            <span class="" dependency="JTIT">
+                                <span class=" txtBold" id="FIELD_JTIT"> &#8226; {{listComp.name}}</span>
+                            </span>
+                            <span class="paddedline locationGap txtItl paddedline" id="FIELD_SKC1" dependency="COMP|JSTA|JCIT">
+                                <span class="companyname" id="FIELD_COMP"><b>Niveau</b> {{listComp.niveau}}</span><span dependency="COMP+JCIT|JSTA">,</span>
+                            </span>
+      <br>
+                        
+                        </div>
+    
+                    </div>
+                            <div id="PARAGRAPH_EXPR_-1" class="paragraph datespara PARAGRAPH_EXPR placeholder-text "><div class="clearfix doc-item">
+                        </div>       
+                    
+                        </div></div></div></div></div></div></div>
 
+                        
             </div></div></div></div></div></div></div></div></div></div></div><div class="track-horizontal" style="display: none; visibility: hidden;"><div style="position: relative; display: block; height: 100%; cursor: pointer; border-radius: inherit; background-color: rgba(0, 0, 0, 0.2); width: 0px;"></div></div><div class="track-vertical" style="visibility: visible;"><div style="position: relative; display: block; width: 100%; cursor: pointer; border-radius: inherit; background-color: rgba(0, 0, 0, 0.2); height: 407px; transform: translateY(0px);"></div></div></div>
                 <script type="text/javascript">
                      function onClickEditor()
