mapping of competences with tools

--- a/src/app/edition-cv/edition-cv.component.html
+++ b/src/app/edition-cv/edition-cv.component.html
@@ -372,7 +372,9 @@
                             <span class="paddedline locationGap txtItl paddedline" id="FIELD_SKC1" dependency="COMP|JSTA|JCIT">
                                 <span class="companyname" id="FIELD_COMP"><b>Niveau</b> {{listComp.niveau}}</span><span dependency="COMP+JCIT|JSTA">,</span>
                             </span>
-      <br>
+                             - outils: {{listComp.tools.name}} - niveau: {{listComp.tools.level}}
+      
+                            <br>
                         
                         </div>
     
